--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -95,11 +95,13 @@
                       <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('etudiant.profil') }}">Profile</a>
                   </li>
-
-
+                  </li>
                   </li>
                       <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('etudiant.list_matieres') }}">Matières</a>
+                  </li>
+                      <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('etudiant.list_annonces') }}">Annonces</a>
                   </li>
 
                   <li class="nav-item">
