--- a/app/templates/administrateur/formations/formation.html
+++ b/app/templates/administrateur/formations/formation.html
@@ -13,9 +13,9 @@
                 <div class="card-header py-3">
 
                     {% if add_formations %}
-                        <center><h1 class="h3 mb-2 text-gray-800">ADD FORMATION</h1></center>
+                        <center><h1 class="h3 mb-2 text-gray-800">AJOUTER FORMATION</h1></center>
                     {% else %}
-                        <center><h1 class="h3 mb-2 text-gray-800">EDIT FORMATION</h1></center>
+                        <center><h1 class="h3 mb-2 text-gray-800">EDITER FORMATION</h1></center>
                     {% endif %}
                 </div>
                 <div class="card-body">
