--- a/app/templates/etudiant/matieres/cours/cours.html
+++ b/app/templates/etudiant/matieres/cours/cours.html
@@ -7,13 +7,13 @@
 
     <!-- Page Heading -->
     <div class="row">
-        <div class="col-lg-6 col-md-6">
-        <h1 class="h3 mb-2 text-gray-800">LISTE DES COURS</h1>
+        <div class="col-lg-8 col-md-6">
+        <h1 class="h3 mb-2 text-gray-800">LISTE DES COURS DE : <strong>{{ matiere.label_matiere.upper() }}</strong></h1>
         </div>
-        <div class="col-lg-6 col-md-6" align="right">
+        <div class="col-lg-4 col-md-6" align="right">
             <a href="{{ url_for('etudiant.list_matieres') }}">
                 <button type="button" class="btn btn-info">
-                    Retourner à la liste des matières
+                    Liste des matières
                 </button>
             </a>
 
@@ -30,44 +30,92 @@
         <div class="card-body">
             {{ utils.flashed_messages() }}
             <br>
-            <div class="table-responsive">
-                {% if cours %}
-                <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
-                    <thead>
-                    <tr>
-                        <th> Titre</th>
-                        <th> Description</th>
-                        <th> Type</th>
-                        <th> Fichier</th>
-                    </tr>
-                    </thead>
+
+            <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+              <li class="nav-item" role="presentation">
+                <a class="nav-link active" id="pills-COURS-tab" data-toggle="pill" href="#pills-COURS" role="tab" aria-controls="pills-COURS" aria-selected="true">COURS</a>
+              </li>
+              <li class="nav-item" role="presentation">
+                <a class="nav-link" id="pills-TP-tab" data-toggle="pill" href="#pills-TP" role="tab" aria-controls="pills-TP" aria-selected="false">TP</a>
+              </li>
+              <li class="nav-item" role="presentation">
+                <a class="nav-link" id="pills-TD-tab" data-toggle="pill" href="#pills-TD" role="tab" aria-controls="pills-TD" aria-selected="false">TD</a>
+              </li>
+              <li class="nav-item" role="presentation">
+                <a class="nav-link" id="pills-NOTES-tab" data-toggle="pill" href="#pills-NOTES" role="tab" aria-controls="pills-NOTES" aria-selected="false">NOTES</a>
+              </li>
+            </ul>
+            <div class="tab-content" id="pills-tabContent">
+              <div class="tab-pane fade show active" id="pills-COURS" role="tabpanel" aria-labelledby="pills-COURS-tab">
+                  <table class="table">
                     <tbody>
-                    {% for crs in cours %}
-                    <tr>
-                        <td>
-                            {{ crs.titre }}
-                        </td>
-                        <td> {{ crs.description }}</td>
-                        <td> {{ crs.type }}</td>
-                        <td>
-<!--                            <a href="{{ crs.fichier }}" download>-->
-                            <a href="{{ url_for('etudiant.download_file', file_path=crs.fichier, matiere_id=crs.matiere_id ) }}">
-                                {{ crs.fichier }}
-                            </a>
-                        </td>
-                    </tr>
+                    {% for cour in cours %}
+                          {% if cour.type=="COURS"%}
+                          <tr>
+                            <td>{{cour.titre}}</td>
+                            <td>{{cour.description}}</td>
+                            <td>{{cour.date}}</td>
+                            <center><td> <a href="{{ url_for('cours.download', filename=cour.fichier) }}">
+                                      <i align= "right" class="fa fa-file-pdf-o fa-2x" aria-hidden="true"></i><br>
+                                     </a></td></center>
+                          </tr>
+                            {% endif %}
                     {% endfor %}
                     </tbody>
-                </table>
+                 </table>
+              </div>
+              <div class="tab-pane fade" id="pills-TP" role="tabpanel" aria-labelledby="pills-TP-tab">                  <table class="table">
+                    <tbody>
+                    {% for cour in cours %}
+                          {% if cour.type=="TP"%}
+                          <tr>
+                            <td>{{cour.titre}}</td>
+                            <td>{{cour.description}}</td>
+                            <td>{{cour.date}}</td>
+                            <center><td> <a href="{{ url_for('cours.download', filename=cour.fichier) }}">
+                                      <i align= "right" class="fa fa-file-pdf-o fa-2x" aria-hidden="true"></i><br>
+                                     </a></td></center>
+                          </tr>
+                            {% endif %}
+                    {% endfor %}
+                    </tbody>
+                 </table>
+              </div>
+              <div class="tab-pane fade" id="pills-TD" role="tabpanel" aria-labelledby="pills-TD-tab">                  <table class="table">
+                    <tbody>
+                    {% for cour in cours %}
+                          {% if cour.type=="TD"%}
+                          <tr>
+                            <td>{{cour.titre}}</td>
+                            <td>{{cour.description}}</td>
+                            <td>{{cour.date}}</td>
+                            <center><td> <a href="{{ url_for('cours.download', filename=cour.fichier) }}">
+                                      <i align= "right" class="fa fa-file-pdf-o fa-2x" aria-hidden="true"></i><br>
+                                     </a></td></center>
+                          </tr>
+                            {% endif %}
+                    {% endfor %}
+                    </tbody>
+                 </table>
+              </div>
 
-
-                {% else %}
-                <div style="text-align: center">
-                    <h3> Pas de cours pour cette matière. </h3>
-                    <hr class="intro-divider">
+                <div class="tab-pane fade" id="pills-NOTES" role="tabpanel" aria-labelledby="pills-NOTES-tab">                  <table class="table">
+                    <tbody>
+                    {% for cour in cours %}
+                          {% if cour.type=="NOTES"%}
+                          <tr>
+                            <td>{{cour.titre}}</td>
+                            <td>{{cour.description}}</td>
+                            <td>{{cour.date}}</td>
+                            <center><td> <a href="{{ url_for('cours.download', filename=cour.fichier) }}">
+                                      <i align= "right" class="fa fa-file-pdf-o fa-2x" aria-hidden="true"></i><br>
+                                     </a></td></center>
+                          </tr>
+                            {% endif %}
+                    {% endfor %}
+                    </tbody>
+                 </table>
                 </div>
-                {% endif %}
-
             </div>
         </div>
     </div>
