--- a/app/templates/etudiant/matieres/matieres.html
+++ b/app/templates/etudiant/matieres/matieres.html
@@ -9,7 +9,7 @@
           <!-- Page Heading -->
         <div class="row">
         <div class="col-lg-6 col-md-6">
-        <h1 class="h3 mb-2 text-gray-800">MATIERES</h1>
+        <h1 class="h3 mb-2 text-primary">LISTE DES MATIÈRES</h1>
         </div>
         <div class="col-lg-6 col-md-6" align="right">
             <a href="{{ url_for('etudiant.AccueilEtud') }}">
@@ -25,42 +25,34 @@
               <div class="card-body">
               {{ utils.flashed_messages() }}
               <br>
-              <div class="table-responsive">
                 {% if matieres %}
-                <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
-                  <thead>
-                    <tr>
-                      <th> Label Matière </th>
-                      <th> Description </th>
-                      <th> Formation </th>
-                      <th> Professeur </th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                   {% for matiere in matieres %}
-                    <tr>
-                      <td>
-                      <a href="{{ url_for('etudiant.list_cours', mat_id=matiere.id) }}">
-                          {{ matiere.label_matiere }}
-                      </a>
-                      </td>
-                      <td> {{ matiere.description }} </td>
-                      <td> {{ matiere.formation.label_formation }} </td>
-                      <td> {{ matiere.professeur.prenom_prof + ' ' + matiere.professeur.nom_prof }} </td>
-                    </tr>
-                    {% endfor %}
-                  </tbody>
-                </table>
+                  <div id="accordion">
+                      {% for matiere in matieres %}
+                      <div class="card">
+                        <div class="card-header" id="{{matiere.id}}">
+                          <h5 class="mb-0">
+                            <button class="btn btn-link" data-toggle="collapse" data-target="#collapse{{matiere.id}}" aria-expanded="true" aria-controls="collapseOne">
+                              {{ matiere.label_matiere }}
+                            </button>
+                          </h5>
+                        </div>
 
-
+                        <div id="collapse{{matiere.id}}" class="collapse" aria-labelledby="{{matiere.id}}" data-parent="#accordion">
+                          <div class="card-body">
+                            <h5 class="card-title"> <strong>RESPONSABLE</strong>  : {{ matiere.professeur.prenom_prof + ' ' + matiere.professeur.nom_prof }}</h5>
+                            <p class="card-text">{{ matiere.description }}</p>
+                            <a href="{{ url_for('etudiant.list_cours', mat_id=matiere.id) }}" class="btn btn-primary">Accéder aux Cours</a>
+                          </div>
+                        </div>
+                      </div>
+                      {% endfor %}
+                  </div>
                 {% else %}
                   <div style="text-align: center">
                     <h3> Pas de matières rensignée pour votre formation. </h3>
                     <hr class="intro-divider">
                   </div>
                 {% endif %}
-
-              </div>
             </div>
           </div>
 
