--- a/app/templates/professeur/cours/cours.html
+++ b/app/templates/professeur/cours/cours.html
@@ -41,7 +41,7 @@
                               <td> {{ cour.description }} </td>
                               <td> {{ cour.date }} </td>
                               <center><td> <a href="{{ url_for('cours.download', filename=cour.fichier) }}">
-                                  <i align= "right" class="fa fa-file-pdf-o fa-3x" aria-hidden="true"></i><br>
+                                  <i align= "left" class="fa fa-file-pdf-o fa-2x" aria-hidden="true"></i><br>
                                  </a></td></center>
 
 
