--- a/app/templates/etudiant/annonces/annonces.html
+++ b/app/templates/etudiant/annonces/annonces.html
@@ -32,7 +32,7 @@
                                  <div class="jumbotron">
                                      <div align="right"><span>
                                          {{mat.professeur}} {{mat.label_matiere}}, le {{annonce.date}}</span></div>
-
+                                        <hr class="my-4">
                                          <h3 class="display-6" class="text-primary">{{annonce.titre}}</h3>
                                          <p class="lead">{{annonce.contenu[:250]}}</p>
                                               <!-- Button trigger modal -->
@@ -49,7 +49,7 @@
                                   <div class="jumbotron">
                                        <div align="right"><span>
                                            Administration {{form.departement}}, le {{annonce.date}}</span></div>
-
+                                        <hr class="my-4">
                                       <h3 class="display-6" class="text-primary">{{annonce.titre}}</h3>
                                       <p class="lead">{{annonce.contenu[:250]}}</p>
                                         <!-- Button trigger modal -->
